kubernetes/clusters/kenobi/monitoring/templates/ingressroute.yaml
#
# Grafana
#
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute

metadata:
  name: grafana
  namespace: monitoring

spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`grafana.feldman.in`)
      kind: Rule
      services:
        - name: grafana
          port: 3000
  tls:
    secretName: grafana-feldman-in-tls
